--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
 	<script src="main.js"></script>
 </head>
 <body>
-	<nav></nav>
-	<header>
-		<h1>Website2</h1>
-	</header>
-	<main>
-		<p>No sidebar</p>
-	</main>
-	<footer>
-		<span>No copyrights!</span>
-		<span>More data</span>
-		<span>Some details</span>
-	</footer>
+	<nav>
+		<ul>
+			<li>Something</li>
+			<li>Something else</li>
+		</ul>
+	</nav>
+	<div id="wrapper">
+		<header>
+			<h1>Website2</h1>
+		</header>
+		<main>
+			<p>No sidebar</p>
+		</main>
+		<footer>
+			<span>No copyrights!</span>
+			<span>More data</span>
+			<span>Some details</span>
+		</footer>
+	</div>
 </body>
 </html>
