--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<script src="main.js"></script>
 </head>
 <body>
-	<nav>
+	<nav id="navbar">
 		<ul>
-			<li>Something</li>
-			<li>Something else</li>
+			<li><a href="">Something</a></li>
+			<li><a href="">Something else</a></li>
 		</ul>
 	</nav>
 	<div id="wrapper">
