updated html, css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<nav id="navbar">
 		<ul>
-			<li><a href="">Something</a></li>
-			<li><a href="">Something else</a></li>
+			<a href=""><li>Something</li></a>
+			<a href=""><li>Something else</li></a>
 		</ul>
 	</nav>
 	<div id="wrapper">
