index.html: added columns, main.css: added flex, main width in pcent

--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
 		<header>
 			<h1>Website2</h1>
 		</header>
-		<main>
-			<p>No sidebar</p>
-		</main>
+		<div id="main">
+			<div class="col">
+				<h3>News Item 1</h3>
+				<p>This and that this and that.</p>
+			</div>
+			<div class="col">
+				<h3>News Item 2</h3>
+				<p>This that those this that.</p>
+			</div>
+			<div class="col">
+				<h3>News Item 3</h3>
+				<p>This that this that.</p>
+			</div>
+		</div>
 		<footer>
 			<span>No copyrights!</span>
 			<span>More data</span>
