--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Website2</title>
+	<title>Roorkee Times</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css">
-	<script src="main.js"></script>
 </head>
 <body>
 	<nav id="navbar">
 		<ul>
-			<a href=""><li>Something</li></a>
-			<a href=""><li>Something else</li></a>
+			<li><a href="">India</a></li>
+			<li><a href="">World</a></li>
+			<li><a href="">Cities</a></li>
+			<li><a href="">Sports</a></li>
+			<li><a href="">Opinion</a></li>
+			<li><a href="">Entertainment</a></li>
+			<li><a href="">Lifestyle</a></li>
+			<li><a href="">Tech</a></li>
 		</ul>
 	</nav>
 	<div id="wrapper">
 		<header>
-			<h1>Website2</h1>
+			<h1>Roorkee Times</h1>
 		</header>
 		<div id="main">
 			<div class="col">
-				<h3>News Item 1</h3>
+				<h3>News Item-1</h3>
 				<p>This and that this and that.</p>
 			</div>
 			<div class="col">
@@ -38,5 +43,6 @@
 			<span>Some details</span>
 		</footer>
 	</div>
+	<script src="main.js"></script>
 </body>
 </html>
