changes made to index, main

--- a/index.html
+++ b/index.html
@@ -22,15 +22,26 @@
 	<div id="wrapper">
 		<header>
 			<h1>Roorkee Times</h1>
+			<span>Rip off of Indian Express Website</span>
 		</header>
 		<div id="main">
 			<div class="col">
 				<h3>News Item-1</h3>
-				<p>This and that this and that.</p>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore 
+					debitis natus doloribus 
+					soluta aperiam laboriosam sed repudiandae mollitia corrupti 
+					ipsa sunt vero molestias, aspernatur numquam nisi minus! Illum, culpa. 
+					Mollitia.
+				</p>
 			</div>
 			<div class="col">
 				<h3>News Item 2</h3>
-				<p>This that those this that.</p>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore 
+					debitis natus doloribus 
+					soluta aperiam laboriosam sed repudiandae mollitia corrupti 
+					ipsa sunt vero molestias, aspernatur numquam nisi minus! Illum, culpa. 
+					Mollitia.
+				</p>
 			</div>
 			<div class="col">
 				<h3>News Item 3</h3>
