--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</nav>
 	<div id="wrapper">
 		<header>
-			<h1>Roorkee Times</h1>
+			<img src="logo.png" alt="logo">
 			<span>Rip off of Indian Express Website</span>
 		</header>
 		<div id="main">
@@ -33,6 +33,7 @@
 					ipsa sunt vero molestias, aspernatur numquam nisi minus! Illum, culpa. 
 					Mollitia.
 				</p>
+				<img src="img/img1.jpg" alt="image-of-protest">
 			</div>
 			<div class="col">
 				<h3>News Item 2</h3>
@@ -42,6 +43,7 @@
 					ipsa sunt vero molestias, aspernatur numquam nisi minus! Illum, culpa. 
 					Mollitia.
 				</p>
+				<img src="img/img2.jpg" alt="image-of-plane">
 			</div>
 			<div class="col">
 				<h3>News Item 3</h3>
